Completion of assignemnt exercise 1